objects/Approval_Flow_By_Contract_Type__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Approval Amount</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;500,001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500,001 - 5,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000,001 - 10,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000,001 - 15,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15,000,001 - 17,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;17,000,000</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appointed Service Partner Agreement (ASP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorised Service Centre Agreement (ASC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General / Other Sales Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Intent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Sales Agreement (LTA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Disclosure Agreement - Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Disclosure Agreement - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Improvement Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain/Logistics Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Agreement - Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Agreement - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Voucher Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <label>Current Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Start</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Stage__c</fullName>
        <label>Approver</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approval Flow By Contract Type</label>
    <listViews>
        <fullName>Appointed_Service_Partner_Agreement_ASP</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Appointed Service Partner Agreement (ASP)</value>
        </filters>
        <label>Appointed Service Partner Agreement (ASP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Authorised_Service_Centre_Agreement_ASC</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Authorised Service Centre Agreement (ASC)</value>
        </filters>
        <label>Authorised Service Centre Agreement (ASC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Development_Agreement</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Development Agreement</value>
        </filters>
        <label>Development Agreement</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Distribution_Agreement</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Distribution Agreement</value>
        </filters>
        <label>Distribution Agreement</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>General_sales_agreements</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>General / Other Sales Agreement</value>
        </filters>
        <label>General / Other Sales Agreements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Letter_of_Intent</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Letter of Intent</value>
        </filters>
        <label>Letter of Intent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Long_Term_Sales_Agreement_LTA</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Long Term Sales Agreement (LTA)</value>
        </filters>
        <label>Long Term Sales Agreement (LTA)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Disclosure_Agreement_Exception</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Non-Disclosure Agreement - Exception</value>
        </filters>
        <label>Non Disclosure Agreement - Exception</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Disclosure_Agreement_Standard</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Non-Disclosure Agreement - Standard</value>
        </filters>
        <label>Non Disclosure Agreement - Standard</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Product_Improvement_Programs_Retrofit</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Product Improvement Programs</value>
        </filters>
        <label>Product Improvement Programs (Retrofit)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Supply_Chain_Logistic_Agreement</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Supply Chain/Logistics Agreement</value>
        </filters>
        <label>Supply Chain / Logistic Agreement</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Warranty_Agreement_Exception</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Warranty Agreement - Exception</value>
        </filters>
        <label>Warranty Agreement - Exception</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Warranty_Agreement_Standard</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Warranty Agreement - Standard</value>
        </filters>
        <label>Warranty Agreement - Standard</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Warranty_Voucher_Agreement</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Next_Stage__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Warranty Voucher Agreement</value>
        </filters>
        <label>Warranty Voucher Agreement</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AFCT{0000}</displayFormat>
        <label>Approval Flow By Contract Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Flow By Contract Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>